Fix confluence plugin configuration screens

--- a/confluence/pom.xml
+++ b/confluence/pom.xml
@@ -55,4 +55,19 @@
 		<module>greenpepper-confluence-demo</module>
 	</modules>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>atlassian-public</id>
+			<url>https://maven.atlassian.com/repository/public</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+				<checksumPolicy>warn</checksumPolicy>
+			</releases>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
