--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
     - mono-complete
     - gnupg
 jdk:
-  - openjdk6
+  - oraclejdk8
 before_install:
   - mkdir -p ~/.m2/ ~/.gnupg/
   - cp -a ./tools/settings.xml ~/.m2/
