[maven-release-plugin] prepare release v4.0.1

--- a/greenpepper/greenpepper-license/pom.xml
+++ b/greenpepper/greenpepper-license/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>greenpepper</artifactId>
         <groupId>com.github.strator-dev.greenpepper</groupId>
-        <version>4.0.1-SNAPSHOT</version>
+        <version>4.0.1</version>
     </parent>
     <artifactId>greenpepper-license</artifactId>
     <packaging>jar</packaging>
