--- a/greenpepper-maven-plugin-it/pom.xml
+++ b/greenpepper-maven-plugin-it/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.strator-dev.greenpepper</groupId>
         <artifactId>greenpepper-base</artifactId>
-        <version>4.0.1-SNAPSHOT</version>
+        <version>4.0.1</version>
     </parent>
     <artifactId>greenpepper-maven-plugin-it</artifactId>
     <name>greenpepper-maven-plugin-it</name>
