--- a/greenpepper/core/pom.xml
+++ b/greenpepper/core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>greenpepper</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>4.0.1</version>
+		<version>4.0.2-SNAPSHOT</version>
 	</parent>
 	<!-- - Basic Information -->
 	<artifactId>greenpepper-core</artifactId>
