--- a/extensions-external/selenium/pom.xml
+++ b/extensions-external/selenium/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
-		<version>4.0.3-SNAPSHOT</version>
+		<version>4.0.3</version>
 	</parent>
 
 	<properties>        
