--- a/confluence/greenpepper-confluence-demo/pom.xml
+++ b/confluence/greenpepper-confluence-demo/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-confluence</artifactId>
-		<version>4.0.3</version>
+		<version>4.0.4-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
