--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </description>
 
     <properties>
-        <greenpepper.core.version>4.0.1</greenpepper.core.version>
+        <greenpepper.core.version>4.0.2-SNAPSHOT</greenpepper.core.version>
     </properties>
 
     <!-- - GreenPepperOpen modules -->
