--- a/greenpepper-open/extensions-external/sandbox/pom.xml
+++ b/greenpepper-open/extensions-external/sandbox/pom.xml
@@ -17,13 +17,13 @@
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
-			<version>${greenpepper.core.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
 			<type>test-jar</type>
-			<version>${greenpepper.core.version}</version>
+			<version>${project.version}</version>
 			<scope>fixture</scope>
 		</dependency>
 
@@ -63,7 +63,7 @@
 			<plugin>
 				<groupId>com.github.strator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
-				<version>${greenpepper.core.version}</version>
+				<version>${project.version}</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
