--- a/greenpepper-open/extensions-external/grails/grails/pom.xml
+++ b/greenpepper-open/extensions-external/grails/grails/pom.xml
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
-			<version>${greenpepper.core.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
