--- a/greenpepper-open/extensions-external/selenium2/pom.xml
+++ b/greenpepper-open/extensions-external/selenium2/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
 			<artifactId>greenpepper-core</artifactId>
-			<version>${greenpepper.core.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.guice</groupId>
@@ -48,7 +48,7 @@
 			<plugin>
 				<groupId>com.github.strator-dev.greenpepper</groupId>
 				<artifactId>greenpepper-maven-plugin</artifactId>
-				<version>${greenpepper.core.version}</version>
+				<version>${project.version}</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
