--- a/greenpepper-open/greenpepper-remote-agent/pom.xml
+++ b/greenpepper-open/greenpepper-remote-agent/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>greenpepper-open</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>4.0.4-SNAPSHOT</version>
+		<version>4.0.4</version>
 	</parent>
 	<artifactId>greenpepper-remote-agent</artifactId>
 	<name>GreenPepper Remote Agent</name>
