--- a/greenpepper-open/confluence/greenpepper-confluence-demo/pom.xml
+++ b/greenpepper-open/confluence/greenpepper-confluence-demo/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-confluence</artifactId>
-		<version>4.0.4</version>
+		<version>4.0.5-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
