--- a/greenpepper-open/confluence/greenpepper-confluence-plugin/pom.xml
+++ b/greenpepper-open/confluence/greenpepper-confluence-plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>greenpepper-confluence</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>4.0.4</version>
+		<version>4.0.5-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>greenpepper-confluence5-plugin</artifactId>
