--- a/greenpepper-open/extensions-external/pom.xml
+++ b/greenpepper-open/extensions-external/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-open</artifactId>
-		<version>4.0.4</version>
+		<version>4.0.5-SNAPSHOT</version>
 	</parent>
 
 	<!--
