--- a/greenpepper/core/pom.xml
+++ b/greenpepper/core/pom.xml
@@ -32,7 +32,12 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<resources>
@@ -109,8 +114,6 @@
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>2.4.2</version>
 				<configuration>
-					<shadedArtifactAttached>true</shadedArtifactAttached>
-					<shadedClassifierName>complete</shadedClassifierName>
                     <minimizeJar>true</minimizeJar>
 					<transformers>
 						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
