--- a/greenpepper/extensions/pom.xml
+++ b/greenpepper/extensions/pom.xml
@@ -19,6 +19,10 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>xmlrpc</groupId>
 			<artifactId>xmlrpc</artifactId>
 			<version>2.0.1</version>
