Support -Dgreenpepper.refresh=true

--- a/pom.xml
+++ b/pom.xml
@@ -316,7 +316,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-site-plugin</artifactId>
-                        <version>3.5.1</version>
+                        <version>3.4</version>
                     </plugin>
                 </plugins>
             </build>
@@ -326,7 +326,9 @@
             <activation>
                 <jdk>[1.8,)</jdk>
             </activation>
-
+            <properties>
+                <additionalparam>-Xdoclint:none</additionalparam>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
