--- a/greenpepper/core/pom.xml
+++ b/greenpepper/core/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
