--- a/greenpepper-open/samples/pom.xml
+++ b/greenpepper-open/samples/pom.xml
@@ -82,35 +82,13 @@
     <dependencies>
         <dependency>
             <groupId>com.github.strator-dev.greenpepper</groupId>
-            <artifactId>greenpepper-extensions-java</artifactId>
+            <artifactId>greenpepper-samples-application</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
-            <version>3.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-annotations</artifactId>
-            <version>3.1beta9</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.persistence</groupId>
-					<artifactId>ejb</artifactId>
-				</exclusion>
-			</exclusions>
-        </dependency>
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
-			<version>1.0.2</version>
-		</dependency>
-				
-        <dependency>
-            <groupId>com.google.code.guice</groupId>
-            <artifactId>guice</artifactId>
-            <version>1.0</version>
+            <groupId>com.github.strator-dev.greenpepper</groupId>
+            <artifactId>greenpepper-extensions-java</artifactId>
+            <version>${project.version}</version>
         </dependency>
 		<dependency>
 			<groupId>org.beanshell</groupId>
