--- a/greenpepper-maven-plugin/pom.xml
+++ b/greenpepper-maven-plugin/pom.xml
@@ -137,10 +137,11 @@
 					</execution>
 				</executions>
 				<dependencies>
+					<!-- http://mvnrepository.com/artifact/org.jvnet.jaxb2_commons/jaxb2-default-value -->
 					<dependency>
-						<groupId>net.java.dev.jaxb2-commons</groupId>
-						<artifactId>default-value</artifactId>
-						<version>1.3</version>
+						<groupId>org.jvnet.jaxb2_commons</groupId>
+						<artifactId>jaxb2-default-value</artifactId>
+						<version>1.1</version>
 					</dependency>
 				</dependencies>
 			</plugin>
