--- a/greenpepper-open/greenpepper-maven-runner/pom.xml
+++ b/greenpepper-open/greenpepper-maven-runner/pom.xml
@@ -244,7 +244,29 @@
 							<pattern>org.xml</pattern>
 							<shadedPattern>com.greenpepper.shaded.org.xml</shadedPattern>
 						</relocation>
+						<relocation>
+							<pattern>org.codehaus.janino</pattern>
+							<shadedPattern>com.greenpepper.shaded.org.codehaus.janino</shadedPattern>
+						</relocation>
 					</relocations>
+					<filters>
+						<filter>
+							<!--
+                                Exclude files that sign a jar
+                                (one or multiple of the dependencies).
+                                One may not repack a signed jar without
+                                this, or you will get a
+                                SecurityException at program start.
+                            -->
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.INF</exclude> <!-- This one may not be required -->
+							</excludes>
+						</filter>
+					</filters>
 				</configuration>
 				<executions>
 					<execution>
