Change the maven plugin dependency to greenpepper-client

--- a/greenpepper-maven-plugin/pom.xml
+++ b/greenpepper-maven-plugin/pom.xml
@@ -20,7 +20,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.strator-dev.greenpepper</groupId>
-			<artifactId>greenpepper-server</artifactId>
+			<artifactId>greenpepper-client</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
